--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -27,6 +27,8 @@
   {% endfor %}
 {% endif %}
 
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+
 <script>
   new Vue({
     el : '#category_tag_menu',
